[FIX] ql-align & ormconfig bundle

--- a/workspaces/client/assets/style/main/_layout.scss
+++ b/workspaces/client/assets/style/main/_layout.scss
@@ -252,3 +252,13 @@ hr {
     line-height: 20px;
   }
 }
+
+.ql-align-right {
+	text-align: right;
+}
+.ql-align-center {
+	text-align: center;
+}
+.ql-align-left {
+	text-align: left;
+}
